// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate svg favicon 1`] = `
{
  "files": [],
  "html": [
    "<link rel="icon" type="image/svg+xml" href="/favicon.svg">",
  ],
  "htmlTags": [
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon.svg",
        "rel": "icon",
        "type": "image/svg+xml",
      },
      "tag": "link",
    },
  ],
  "images": [
    {
      "contents": "<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 1024 1024" width="1024" height="1024">
  <image width="1024" height="1024" xlink:href="data:image/"/>
</svg>",
      "name": "favicon.svg",
    },
  ],
}
`;

exports[`should generate svg favicon 10`] = `
{
  "files": [],
  "html": [
    "<link rel="icon" type="image/x-icon" href="/favicon.ico">",
    "<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">",
    "<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">",
    "<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">",
  ],
  "htmlTags": [
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon.ico",
        "rel": "icon",
        "type": "image/x-icon",
      },
      "tag": "link",
    },
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon-16x16.png",
        "rel": "icon",
        "sizes": "16x16",
        "type": "image/png",
      },
      "tag": "link",
    },
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon-32x32.png",
        "rel": "icon",
        "sizes": "32x32",
        "type": "image/png",
      },
      "tag": "link",
    },
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon-48x48.png",
        "rel": "icon",
        "sizes": "48x48",
        "type": "image/png",
      },
      "tag": "link",
    },
  ],
  "images": [
    {
      "contents": null,
      "name": "favicon.ico",
    },
    {
      "contents": null,
      "name": "favicon-16x16.png",
    },
    {
      "contents": null,
      "name": "favicon-32x32.png",
    },
    {
      "contents": null,
      "name": "favicon-48x48.png",
    },
  ],
}
`;

exports[`should reuse svg as a favicon 1`] = `
{
  "files": [],
  "html": [
    "<link rel="icon" type="image/svg+xml" href="/favicon.svg">",
  ],
  "htmlTags": [
    FaviconHtmlTag {
      "attrs": {
        "href": "/favicon.svg",
        "rel": "icon",
        "type": "image/svg+xml",
      },
      "tag": "link",
    },
  ],
  "images": [
    {
      "contents": "<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1500 1500" width="1500" height="1500">
  <path fill="#ff8c8c" fill-rule="evenodd" stroke="#ff8c8c" stroke-linecap="round" stroke-linejoin="round" stroke-width="125" d="M636.39443 914.97056L407.70197 686.75804l-81.36252 82.95151 310.61677 310.46155 537.00668-538.1103-83.356-82.94415z"/>
</svg>
",
      "name": "favicon.svg",
    },
  ],
}
`;
